@@ -1,3 +1,10 @@
+2010-11-12  Ian Lance Taylor  <iant@google.com>
+
+	PR other/46332
+	* cp-demangle.c (d_print_function_type): Don't print parentheses
+	if there are no modifiers to print.
+	* testsuite/demangle-expected: Tweak one test case, add another.
+
 2010-11-04  Richard Henderson  <rth@redhat.com>
 
 	* configure.ac (AC_CHECK_HEADERS): Add process.h.
